--- a/src/assets/css/dashboard.scss
+++ b/src/assets/css/dashboard.scss
@@ -172,6 +172,15 @@
     margin: 0px;
   }
 }
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
 
 .navbar .navbar-toggler {
   top: .25rem;
